"in" removed from syntax highlighting
codemirror-tscriptmode.js
- removed "in" from syntax highlighting, replaced by note

Makefile
- missing index.html.zip file recipe

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -113,7 +113,7 @@ CodeMirror.defineMode("text/tscript", function(config, parserConfig)
 			"then": true,
 			"else": true,
 			"for": true,
-			"in": true,
+			// TODO: should in be considered a keyword
 			"do": true,
 			"while": true,
 			"break": true,
