--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
 <html>
+    <!DOCTYPE html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
