--- a/src/ide/index.html
+++ b/src/ide/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>TScript IDE</title>
 	</head>
-	<body>
+	<body style="overflow: hidden">
 		<div
 			id="ide-container"
 			style="left: 0; top: 0; width: 100vw; height: 100vh"
