--- a/src/ide/index.html
+++ b/src/ide/index.html
@@ -8,7 +8,13 @@
 	<body style="overflow: hidden">
 		<div
 			id="ide-container"
-			style="left: 0; top: 0; width: 100vw; height: 100vh"
+			style="
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100vw;
+				height: 100vh;
+			"
 		></div>
 	</body>
 </html>
